--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3307/demo_db
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 
